Fixed alignment of the clock icon

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -57,7 +57,7 @@ img[src="img/clock.png"] {
   height: 35px;
   padding-left:10px;
   margin-top:3px;
-  margin-left: 45px;
+  margin-left: 20px;
 }
 
 #createGroup {
